Cherry-pick r283662. rdar://problem/84717723

Fix watchOS, tvOS, and macCatalyst builds after r283592
    https://bugs.webkit.org/show_bug.cgi?id=231300
    rdar://83936867

    Reviewed by Wenson Hsieh.

    Source/WebKit:

    * Platform/spi/ios/PhotosUISPI.h:
    * UIProcess/ios/forms/WKFileUploadPanel.mm:
    (-[WKFileUploadPanel imagePickerController:didFinishPickingMultipleMediaWithInfo:]):

    Source/WTF:

    * wtf/PlatformEnableCocoa.h:
    * wtf/PlatformHave.h:

    Canonical link: https://commits.webkit.org/242605@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283662 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.300@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@284928 268f45cc-cd09-0410-ab3c-d52691b4dbfc